--- a/package.json
+++ b/package.json
@@ -1,11 +1,43 @@
 {
   "name": "bulba",
   "displayName": "bulba",
-  "description": "A forestwood-style and bulbasaur-pokemon inspired dark theme for VS-Code. It's carefully designed keeping visual hierarchy in mind with custom color palette to tune your attention towards the syntax which you'd pay most attention to progressively muting the rest which requires less attention.",
   "version": "0.0.1",
+  "description": "A forestwood-style and bulbasaur-pokemon inspired dark theme for VS-Code. It's carefully designed keeping visual hierarchy in mind with custom color palette to tune your attention towards the syntax which you'd pay most attention to progressively muting the rest which requires less attention.",
+  "publisher": "omkariyer",
+  "icon": "./icon.png",
+  "author": {
+    "name": "Omkar Iyer"
+  },
+  "galleryBanner": {
+    "color": "#000000",
+    "theme": "dark"
+  },
+  "keywords": [
+    "theme",
+    "dark",
+    "dark mode",
+    "dark theme",
+    "vs code theme",
+    "forest theme",
+    "bulbasaur theme",
+    "modern",
+    "minimal",
+    "minimalistic",
+    "open source"
+  ],
+  "main": "./themes/bulba-color-theme.json",
   "engines": {
     "vscode": "^1.101.0"
   },
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/omkar-4/bulba/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/omkar-4/bulba.git"
+  },
+  "homepage": "https://github.com/omkar-4/bulba",
   "categories": [
     "Themes"
   ],
