--- a/package.json
+++ b/package.json
@@ -25,11 +25,10 @@
     "minimalistic",
     "open source"
   ],
-  "main": "./themes/bulba-color-theme.json",
   "engines": {
     "vscode": "^1.101.0"
   },
-  "license": "MIT",
+  "license": "AGPL-3.0-or-later",
   "bugs": {
     "url": "https://github.com/omkar-4/bulba/issues"
   },
